RESOLVED FIXED134792
Assertions or crashes under _takeViewSnapshot when restoring windows
https://bugs.webkit.org/show_bug.cgi?id=134792
Summary Assertions or crashes under _takeViewSnapshot when restoring windows
Tim Horton
Reported 2014-07-09 19:08:43 PDT
We shouldn't try to take a snapshot of a non-visible window! Also, we shouldn't crash if you try to make an IOSurface from a null CGImageRef.
Attachments
patch (2.49 KB, patch)
2014-07-09 19:10 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-07-09 19:10:59 PDT
Tim Horton
Comment 2 2014-07-10 08:40:24 PDT
Note You need to log in before you can comment on or make changes to this bug.