Assertions or crashes under _takeViewSnapshot when restoring windows https://bugs.webkit.org/show_bug.cgi?id=134792

Reviewed by Simon Fraser.

* UIProcess/API/mac/WKView.mm:
(-[WKView _takeViewSnapshot]):
Taking a window-server snapshot of a non-visible window tends to not succeed.

* platform/graphics/cocoa/IOSurface.mm:
(IOSurface::createFromImage):


Canonical link: https://commits.webkit.org/152746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170963 268f45cc-cd09-0410-ab3c-d52691b4dbfc